<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".CreateCardset"
    android:background="@color/background_main">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView5"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/create_palette"
                app:layout_constraintStart_toEndOf="@+id/icon_color"
                app:layout_constraintTop_toTopOf="@+id/create_palette">

                <ImageView
                    android:id="@+id/create_palette_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/red" />
            </com.google.android.material.card.MaterialCardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/create_palette"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/materialCardView5"
                app:layout_constraintTop_toBottomOf="@+id/create_title" />

            <Button
                android:id="@+id/button_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/content_description_create_button"
                android:text="@string/create_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <EditText
                android:id="@+id/create_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/create_hint_title"
                android:minHeight="48dp"
                android:textColor="?colorTertiary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toEndOf="@+id/icon_title"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <EditText
                    android:id="@+id/create_front"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_description_create_front"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/create_hint_front_entries"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minHeight="48dp"
                    android:textColor="?colorTertiary" />

                <EditText
                    android:id="@+id/create_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/content_description_create_back"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/create_hint_back_entries"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minHeight="48dp"
                    android:textColor="?colorTertiary" />
            </LinearLayout>

            <ImageView
                android:id="@+id/icon_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/materialCardView5"
                app:srcCompat="@drawable/ic_create_color" />

            <ImageView
                android:id="@+id/icon_entries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"
                app:srcCompat="@drawable/ic_create_edit" />

            <ImageView
                android:id="@+id/icon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@+id/create_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_title"
                app:srcCompat="@drawable/ic_create_title" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/create_hint_entries"
                android:textColor="?colorTertiary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_entries"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>