<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".CardViewer"
    android:background="@color/background_main">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/card_viewer_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:importantForAccessibility="no" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/card_viewer_face"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:importantForAccessibility="no"
            android:paddingVertical="64dp"
            android:text="Example"
            android:textAlignment="center"
            android:textColor="?colorTertiary"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/card_viewer_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_card_viewer_front" />

    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/card_viewer_button_flip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/content_description_flip"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_card_viewer_flip" />

    <ImageButton
        android:id="@+id/card_viewer_button_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/content_description_right"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_viewer_button_flip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_viewer_button_flip"
        app:layout_constraintTop_toTopOf="@+id/card_viewer_button_flip"
        app:srcCompat="@drawable/ic_card_viewer_right" />

    <ImageButton
        android:id="@+id/card_viewer_button_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/content_description_left"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_viewer_button_flip"
        app:layout_constraintEnd_toStartOf="@+id/card_viewer_button_flip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/card_viewer_button_flip"
        app:srcCompat="@drawable/ic_card_viewer_left" />

    <TextView
        android:id="@+id/card_viewer_index_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="1/25"
        android:textColor="?colorTertiary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/card_viewer_button_randomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/content_description_random"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView2"
        app:layout_constraintTop_toTopOf="@+id/materialCardView2"
        app:srcCompat="@drawable/ic_card_viewer_randomize" />

</androidx.constraintlayout.widget.ConstraintLayout>